--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 ---
 layout: about
-title: About
+title: 인사말
 ---
 
-<h2>About</h2>
+## 인사말
+
+![이미지]("assets/img/favicon_wing_256.png") {: .center-image }
+
 
 <p>
 :art:&nbsp;Yet another theme for elegant writers with modern flat style
