--- a/about.html
+++ b/about.html
@@ -3,18 +3,40 @@ layout: about
 title: 인사말
 ---
 
-## 인사말
+<style>
+*{
+  text-align: center;
+}
+#SNSlinks img{
+  padding: 10px;
+}
+</style>
 
-![이미지]("assets/img/favicon_wing_256.png") {: .center-image }
-
-
-<p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
-</p>
-
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
+<img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px;" alt="이미지">
+<h2>· 인사말 ·</h2>
+<div style="margin-top: 50px;">
+  <p>
+    갤러리를 방문해주셔서 감사합니다.<br>
+  </p>
+  <p>
+    저는 <b>Client Developer</b> 이며,<br>
+    이 곳은 지금까지의 작업물을 전시하는 공간입니다.<br>
+    마음껏 구경하세요!
+  </p>
+</div>
+<div style="margin-top: 50px;">
+  <p>
+    더 많은 이야기가 궁금하다면...<br>
+  </p>
+  <div id="SNSlinks">
+    <a href="https://github.com/SeungHyeon-Hong/SeungHyeon-Hong.github.io">
+      <img src="https://simpleicons.org/icons/github.svg" title="Github" style="width:64px;" target="_blank" alt="Github link icon">
+    </a>
+    <a href="https://blog.naver.com/dusdkel">
+      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" style="width:64px;" target="_blank" alt="NaverBlog link icon">
+    </a>
+    <a href="https://discord.gg/gw6RBwPxdb">
+      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" style="width:64px;" target="_blank" alt="Discord link icon">
+    </a>
+  </div>
+</div>
