--- a/about.html
+++ b/about.html
@@ -4,17 +4,19 @@ title: 인사말
 ---
 
 <style>
-*{
-  text-align: center;
-}
-#SNSlinks img{
+.SNSlinks {
   padding: 10px;
+}
+.SNSlinks img {
+  width: 64px;
 }
 </style>
 
-<img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px;" alt="이미지">
-<h2>· 인사말 ·</h2>
-<div style="margin-top: 50px;">
+<img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px; text-align: center;" alt="이미지">
+<div style="text-align: center;">
+  <h2>· 인사말 ·</h2>
+</div>
+<div style="margin-top: 50px; text-align: center;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
@@ -28,15 +30,19 @@ title: 인사말
   <p>
     더 많은 이야기가 궁금하다면...<br>
   </p>
-  <div id="SNSlinks">
+  <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong/SeungHyeon-Hong.github.io">
-      <img src="https://simpleicons.org/icons/github.svg" title="Github" style="width:64px;" target="_blank" alt="Github link icon">
+      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="_blank" alt="Github link icon">
     </a>
+  </div>
+  <div class="SNSlinks">
     <a href="https://blog.naver.com/dusdkel">
-      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" style="width:64px;" target="_blank" alt="NaverBlog link icon">
+      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="_blank" alt="NaverBlog link icon">
     </a>
+  </div>
+  <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb">
-      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" style="width:64px;" target="_blank" alt="Discord link icon">
+      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="_blank" alt="Discord link icon">
     </a>
   </div>
 </div>
