--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ title: 인사말
 
 <style>
 .SNSlinks {
+  display: inline-block;
   padding: 10px;
 }
 .SNSlinks img {
@@ -13,10 +14,8 @@ title: 인사말
 </style>
 
 <img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px; text-align: center;" alt="이미지">
-<div style="text-align: center;">
-  <h2>· 인사말 ·</h2>
-</div>
-<div style="margin-top: 50px; text-align: center;">
+<h2>· 인사말 ·</h2>
+<div style="margin-top: 50px;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
