--- a/about.html
+++ b/about.html
@@ -14,8 +14,10 @@ title: 인사말
 </style>
 
 <img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px; text-align: center;" alt="이미지">
-<h2>· 인사말 ·</h2>
-<div style="margin-top: 50px;">
+<div style= "text-align: center;">
+  <h2>· 인사말 ·</h2>
+</div>
+<div style="margin-top: 50px; text-align: center;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
@@ -25,7 +27,7 @@ title: 인사말
     마음껏 구경하세요!
   </p>
 </div>
-<div style="margin-top: 50px;">
+<div style="margin-top: 50px; text-align: center;">
   <p>
     더 많은 이야기가 궁금하다면...<br>
   </p>
