--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: 인사말
 }
 </style>
 
-<img src="assets/img/favicon_wing_256.png" style="margin-top:64px; margin-bottom:16px; text-align: center;" alt="이미지">
+<img src="assets/img/favicon_wing_256.png" style="margin-top:32px; margin-bottom:16px; text-align: center;">
 <div style= "text-align: center;">
   <h2>· 인사말 ·</h2>
 </div>
@@ -32,18 +32,18 @@ title: 인사말
     더 많은 이야기가 궁금하다면...<br>
   </p>
   <div class="SNSlinks">
-    <a href="https://github.com/SeungHyeon-Hong/SeungHyeon-Hong.github.io">
-      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="_blank" alt="Github link icon">
+    <a href="https://github.com/SeungHyeon-Hong">
+      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="blank" alt="Github link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://blog.naver.com/dusdkel">
-      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="_blank" alt="NaverBlog link icon">
+      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="blank" alt="NaverBlog link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb">
-      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="_blank" alt="Discord link icon">
+      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="blank" alt="Discord link icon">
     </a>
   </div>
 </div>
