--- a/about.html
+++ b/about.html
@@ -33,17 +33,17 @@ title: 인사말
   </p>
   <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong">
-      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="blank" alt="Github link icon">
+      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="_blank" alt="Github link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://blog.naver.com/dusdkel">
-      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="blank" alt="NaverBlog link icon">
+      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="_blank" alt="NaverBlog link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb">
-      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="blank" alt="Discord link icon">
+      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="_blank" alt="Discord link icon">
     </a>
   </div>
 </div>
