--- a/about.html
+++ b/about.html
@@ -32,18 +32,18 @@ title: 인사말
     더 많은 이야기가 궁금하다면...<br>
   </p>
   <div class="SNSlinks">
-    <a href="https://github.com/SeungHyeon-Hong">
-      <img src="https://simpleicons.org/icons/github.svg" title="Github" target="_blank" alt="Github link icon">
+    <a href="https://github.com/SeungHyeon-Hong" target="_blank">
+      <img src="https://simpleicons.org/icons/github.svg" title="Github" alt="Github link icon">
     </a>
   </div>
   <div class="SNSlinks">
-    <a href="https://blog.naver.com/dusdkel">
-      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" target="_blank" alt="NaverBlog link icon">
+    <a href="https://blog.naver.com/dusdkel" target="_blank">
+      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" alt="NaverBlog link icon">
     </a>
   </div>
   <div class="SNSlinks">
-    <a href="https://discord.gg/gw6RBwPxdb">
-      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" target="_blank" alt="Discord link icon">
+    <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
+      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" alt="Discord link icon">
     </a>
   </div>
 </div>
