--- a/about.html
+++ b/about.html
@@ -33,17 +33,17 @@ title: 인사말
   </p>
   <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong" target="_blank">
-      <img src="https://simpleicons.org/icons/github.svg" title="Github" alt="Github link icon">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" title="Github" alt="Github link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://blog.naver.com/dusdkel" target="_blank">
-      <img src="https://simpleicons.org/icons/naver.svg" title="NaverBlog" alt="NaverBlog link icon">
+      <img src="https://w.namu.la/s/7f46f2b6e9ed994a9b56221f87878fc295ab1155c6be3439de558677827c0768c5675dd3612a0261d618758a8cf0c3be9a78295481ec829e23c8d458f59a0ac7d4ba15b7e4b82ac32a076a2a7d58e1809ee6b14378dc7d790c6baf0118e5f58e" title="NaverBlog" alt="NaverBlog link icon">
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
-      <img src="https://simpleicons.org/icons/discord.svg" title="Discord" alt="Discord link icon">
+      <img src="https://discord.com/assets/3437c10597c1526c3dbd98c737c2bcae.svg" title="Discord" alt="Discord link icon">
     </a>
   </div>
 </div>
