--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ title: 인사말
   </div>
   <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
-      <img src="https://discord.com/assets/3437c10597c1526c3dbd98c737c2bcae.svg" title="Discord" alt="Discord link icon">
+      <img src="https://discord.com/assets/f9bb9c4af2b9c32a2c5ee0014661546d.png" title="Discord" alt="Discord link icon">
     </a>
   </div>
 </div>
