--- a/about.html
+++ b/about.html
@@ -4,8 +4,13 @@ title: 인사말
 ---
 
 <style>
-.SNSlinks {
+.SNSBox{
   display: inline-block;
+  margin : 10px;
+  border : 1px solid darkgray;
+  border-radius: 4px;
+}
+.SNSlinks {
   padding: 10px;
   align-items: center;
 }
@@ -18,7 +23,7 @@ title: 인사말
 <div style= "text-align: center;">
   <h2>· 인사말 ·</h2>
 </div>
-<div style="margin-top: 50px; text-align: center;">
+<div style="margin-top: 50px; margin-bottom: 30px; text-align: center;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
@@ -27,11 +32,12 @@ title: 인사말
     이 곳은 지금까지의 작업물을 전시하는 공간입니다.<br>
     마음껏 구경하세요!
   </p>
-</div>
-<div style="margin-top: 50px; text-align: center;">
+  <div style="height:50px"></div>
   <p>
     더 많은 이야기가 궁금하다면...<br>
   </p>
+</div>
+<div class="SNSBox" style="text-align: center;">
   <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" title="Github" alt="Github link icon">
