--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@ title: 인사말
 
 <style>
 .SNSBox{
+  display: inline-block;
   margin : 10px;
-  border : 1px solid darkgray;
+  border : 2px solid lightgray;
   border-radius: 4px;
   align-items: center;
 }
@@ -23,7 +24,7 @@ title: 인사말
 <div style= "text-align: center;">
   <h2>· 인사말 ·</h2>
 </div>
-<div style="margin-top: 50px; margin-bottom: 30px; text-align: center;">
+<div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
@@ -32,7 +33,7 @@ title: 인사말
     이 곳은 지금까지의 작업물을 전시하는 공간입니다.<br>
     마음껏 구경하세요!
   </p>
-  <div style="height:50px"></div>
+  <div style="height:40px"></div>
   <p>
     더 많은 이야기가 궁금하다면...<br>
   </p>
