--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@ title: 인사말
 
 <style>
 .SNSBox{
-  display: inline-block;
+  display: grid;
   margin : 10px;
+  padding : 10px;
   border : 2px solid lightgray;
-  border-radius: 4px;
-  align-items: center;
+  border-radius: 6px;
+  place-content: center;
+  place-items: center;
 }
 .SNSlinks {
-  display: inline-block;
   padding: 10px;
 }
 .SNSlinks img {
