--- a/about.html
+++ b/about.html
@@ -6,14 +6,13 @@ title: 인사말
 <style>
 .SNSBox{
   display: grid;
-  margin : 10px;
+  margin : 10px 40px;
   padding : 10px;
-  border : 2px solid lightgray;
-  border-radius: 6px;
   place-content: center;
   place-items: center;
 }
 .SNSlinks {
+  display: inline-block;
   padding: 10px;
 }
 .SNSlinks img {
