--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@ title: 인사말
   padding : 10px;
   place-content: center;
   place-items: center;
+  grid-auto-flow: row;
 }
 .SNSlinks {
   display: inline-block;
