--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: 인사말
   padding : 10px;
   place-content: center;
   place-items: center;
-  grid-auto-flow: row;
+  grid-auto-flow: column;
 }
 .SNSlinks {
   display: inline-block;
