--- a/about.html
+++ b/about.html
@@ -19,6 +19,19 @@ title: 인사말
 .SNSlinks img {
   width: 64px;
 }
+.fa-github{
+    color: #181717;
+}
+  .fa-discord{
+    color: #5865F2;
+}
+.fa-comment-alt{
+    color: #03C75A;
+}
+.fa-comment-alt::after{
+  content:"Blog";
+  color: #ffffff;
+}
 </style>
 
 <img src="assets/img/favicon_wing_256.png" style="margin-top:32px; margin-bottom:16px; text-align: center;">
@@ -42,17 +55,20 @@ title: 인사말
 <div class="SNSBox" style="text-align: center;">
   <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" title="Github" alt="Github link icon">
+      <i class="fab fa-github"></i>
+<!--       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" title="Github" alt="Github link icon"> -->
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://blog.naver.com/dusdkel" target="_blank">
-      <img src="https://w.namu.la/s/7f46f2b6e9ed994a9b56221f87878fc295ab1155c6be3439de558677827c0768c5675dd3612a0261d618758a8cf0c3be9a78295481ec829e23c8d458f59a0ac7d4ba15b7e4b82ac32a076a2a7d58e1809ee6b14378dc7d790c6baf0118e5f58e" title="NaverBlog" alt="NaverBlog link icon">
+      <i class="fas fa-comment-alt"></i>
+<!--       <img src="https://w.namu.la/s/7f46f2b6e9ed994a9b56221f87878fc295ab1155c6be3439de558677827c0768c5675dd3612a0261d618758a8cf0c3be9a78295481ec829e23c8d458f59a0ac7d4ba15b7e4b82ac32a076a2a7d58e1809ee6b14378dc7d790c6baf0118e5f58e" title="NaverBlog" alt="NaverBlog link icon"> -->
     </a>
   </div>
   <div class="SNSlinks">
     <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
-      <img src="https://seeklogo.com/images/D/discord-color-logo-E5E6DFEF80-seeklogo.com.png" title="Discord" alt="Discord link icon">
+      <i class="fab fa-discord"></i>
+<!--       <img src="https://seeklogo.com/images/D/discord-color-logo-E5E6DFEF80-seeklogo.com.png" title="Discord" alt="Discord link icon"> -->
     </a>
   </div>
 </div>
