--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ title: 인사말
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
   <p>
-    저는 <b>Client Developer</b> 이며,<br>
+    저는 <span style="font-size: 1.5em; font-weight:bold;">Client Developer</span> 이며,<br>
     이 곳은 지금까지의 작업물을 전시하는 공간입니다.<br>
     마음껏 구경하세요!
   </p>
@@ -40,6 +40,11 @@ title: 인사말
   </p>
 </div>
 <div class="SNSBox" style="text-align: center;">
+  <div class="SNSlinks">
+    <a href="http://qr.kakao.com/talk/5AGVOFRC5vKu8v7EQn6goqg4Tj0-" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/KakaoTalk_logo.svg/240px-KakaoTalk_logo.svg.png" title="KakaoTalk" alt="KakaoTalk link icon">
+    </a>
+  </div>
   <div class="SNSlinks">
     <a href="https://github.com/SeungHyeon-Hong" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" title="Github" alt="Github link icon">
