--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ title: 인사말
 
 <img src="assets/img/favicon_wing_256.png" style="margin-top:32px; margin-bottom:16px; text-align: center;">
 <div style= "text-align: center;">
-  <h2>· 인사말 ·</h2>
+  <h2 id="인사말">· 인사말 ·</h2>
 </div>
 <div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
   <p>
