--- a/resume.html
+++ b/resume.html
@@ -24,10 +24,18 @@ title: 이력서
 <div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
     <h2 id="resume">· 이력서 ·</h2>
     <p>2019년부터 프로그래머로 일하고 있습니다.</p>
+</div>
 
+<div>
+    <h3 id="introduce">자기소개</h3>
+    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다. 
+        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
+</div>
+
+<div style="text-align: center;">
     <ul style="display: inline-block;">
         <li::marker style="content: '';">
-            <h4 style="text-align: left;">Contact</h4>
+            <h4 id="contact" style="text-align: left;">연락</h4>
             </li>
             <li::marker style="content: ''">
                 <div class="SNSBox">
@@ -49,7 +57,7 @@ title: 이력서
     </ul>
     <ul style="display: inline-block;">
         <li::marker style="content: '';">
-            <h4 style="text-align: left;">Channel</h4>
+            <h4 id="channel" style="text-align: left;">더 보기</h4>
             </li>
             <li::marker style="content: ''">
                 <div class="SNSBox">
@@ -76,13 +84,6 @@ title: 이력서
     </ul>
 </div>
 
-<div>
-    <h3 id="introduce">자기소개</h3>
-    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다. 
-        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
-</div>
-
-<hr>
 <div>
     <h3 id="workExperience">경력</h3>
     <table>
@@ -156,7 +157,6 @@ title: 이력서
     </table>
 </div>
 
-<hr>
 <div>
     <h3 id="otherExperience">활동</h3>
     <table>
@@ -208,7 +208,6 @@ title: 이력서
     </table>
 </div>
 
-<hr>
 <div>
     <h3 id="skil">사용 가능 기술</h3>
     <ul>
@@ -217,7 +216,6 @@ title: 이력서
     </ul>
 </div>
 
-<hr>
 <div>
     <h3 id="education">학력</h3>
     <ul>
