--- a/resume.html
+++ b/resume.html
@@ -86,6 +86,10 @@ title: 이력서
 
 <div>
     <h3 id="workExperience">경력</h3>
+    <ul>
+        <li>2022.04 ~ 2023.03 주식회사 마블러스 (Solution팀 선임연구원)</li>
+        <li>2019.12 ~ 2022.04 (주)지앤플렉스 (컨텐츠팀 선임연구원)</li>
+    </ul>
     <table>
         <tr>
             <td valign="top">
