--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: 인사말
 <div style= "text-align: center;">
   <h2 id="인사말">· 인사말 ·</h2>
 </div>
-<div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
+<div style="margin-top: 50px; text-align: center;">
   <p>
     갤러리를 방문해주셔서 감사합니다.<br>
   </p>
