--- a/resume.html
+++ b/resume.html
@@ -88,8 +88,10 @@ title: 이력서
     <h3 id="workExperience">경력</h3>
     <table>
         <caption style="text-align: left;">
-            <h4>주식회사 마블러스</h4><br>
-            2022.04 ~ 2023.03 주식회사 마블러스 (Solution팀 선임연구원)
+            <h4 style="margin: 0;">
+                주식회사 마블러스<br>
+                <p style="font-size: small;">2022.04 ~ 2023.03 주식회사 마블러스 (Solution팀 선임연구원)</p>
+            </h4>
         </caption>
         <tr>
             <td valign="top">
@@ -103,8 +105,10 @@ title: 이력서
     </table>
     <table>
         <caption style="text-align: left">
-            <h4>(주)지앤플렉스</h4><br>
-            2019.12 ~ 2022.04 (주)지앤플렉스 (컨텐츠팀 선임연구원)
+            <h4 style="margin: 0;">
+                (주)지앤플렉스<br>
+                <p style="font-size: small;">2019.12 ~ 2022.04 (주)지앤플렉스 (컨텐츠팀 선임연구원)</p>
+            </h4>
         </caption>
         <tr>
             <td valign="top">
