--- a/resume.html
+++ b/resume.html
@@ -88,8 +88,9 @@ title: 이력서
     <h3 id="workExperience">경력</h3>
     <table>
         <caption style="text-align: left;">
-            <h4 style="margin: 0;">주식회사 마블러스</h4>
-            <p style="font-size:medium;">2022.04 ~ 2023.03<br>Solution팀 선임연구원</p>
+            <h4 style="visibility: hidden;">주식회사 마블러스</h4>
+            <p><b>주식회사 마블러스</b></p>
+            <p style="font-size:medium;">2022.04 ~ 2023.03 Solution팀 선임연구원</p>
         </caption>
         <tr>
             <td valign="top">
