--- a/resume.html
+++ b/resume.html
@@ -87,9 +87,8 @@ title: 이력서
 <div>
     <h3 id="workExperience">경력</h3>
     <table>
-        <caption style="margin: 10dp; text-align: left;">
-            <h4 style="display: inline; margin: 0;">주식회사 마블러스 </h4>
-            <p style="display: inline; font-size: small;">2022.04 ~ 2023.03 Solution팀 선임연구원</p>
+        <caption style="margin: 20px 10px; text-align: left;">
+            <h4 style="display: inline; margin: 0;">주식회사 마블러스 </h4>2022.04 ~ 2023.03<br>Solution팀 선임연구원
         </caption>
         <tr>
             <td valign="top">
@@ -102,9 +101,8 @@ title: 이력서
         </tr>
     </table>
     <table>
-        <caption style="margin: 10dp; text-align: left">
-            <h4 style="display: inline; margin: 0;">(주)지앤플렉스 </h4>
-            <p style="display: inline; font-size: small;">2019.12 ~ 2022.04<br>컨텐츠팀 선임연구원</p>
+        <caption style="margin: 20px 10px; text-align: left">
+            <h4 style="display: inline; margin: 0;">(주)지앤플렉스 </h4>2019.12 ~ 2022.04<br>컨텐츠팀 선임연구원
         </caption>
         <tr>
             <td valign="top">
