--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@ title: 이력서
     <h3 id="workExperience">경력</h3>
     <table>
         <tr>
-            <td>
+            <td colspan="2">
                 <h4 style="margin: 0;">주식회사 마블러스</h4>
                 2022-04 ~ 2023-03 Solution팀 선임연구원
             </td>
@@ -104,7 +104,7 @@ title: 이력서
     </table>
     <table>
         <tr>
-            <td>
+            <td colspan="2">
                 <h4 style="margin: 0;">주(주)지앤플렉스</h4>
                 2019-12 ~ 2022-04 컨텐츠팀 선임연구원
             </td>
