--- a/resume.html
+++ b/resume.html
@@ -86,8 +86,8 @@ title: 이력서
 <div>
     <h3 id="workExperience">경력</h3>
     <table>
-        <caption style="text-align: left;">
-            <h4 id="co2" style="display: inline; margin: 10px;">주식회사 마블러스</h4>
+        <caption style=" margin: 10px; text-align: left;">
+            <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
             <p style="display: inline;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
         </caption>
         <tr>
@@ -101,8 +101,8 @@ title: 이력서
         </tr>
     </table>
     <table>
-        <caption style="text-align: left;">
-            <h4 id="co1" style="display: inline; margin: 10px;">(주)지앤플렉스</h4>
+        <caption style=" margin: 10px; text-align: left;">
+            <h4 id="co1" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
             <p style="display: inline;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
         </caption>
         <tr>
