--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@ title: 이력서
     <h3 id="workExperience">경력</h3>
     <table>
         <caption style=" margin: 10px; text-align: left;">
-            <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
+            <h4 id="co2" style="display: inline-block; margin: 0;">주식회사 마블러스</h4>
             <p style="display: inline;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
         </caption>
         <tr>
@@ -102,7 +102,7 @@ title: 이력서
     </table>
     <table>
         <caption style=" margin: 10px; text-align: left;">
-            <h4 id="co1" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
+            <h4 id="co1" style="display: inline-block; margin: 0;">(주)지앤플렉스</h4>
             <p style="display: inline;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
         </caption>
         <tr>
