--- a/resume.html
+++ b/resume.html
@@ -85,11 +85,11 @@ title: 이력서
 
 <div>
     <h3 id="workExperience">경력</h3>
+    <div style="margin: 10px;">
+        <h4 id="co2" style="margin: 0;">주식회사 마블러스</h4>
+        <p>2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
+    </div>
     <table>
-        <caption style=" margin: 10px; text-align: left;">
-            <h4 id="co2" style="margin: 0;">주식회사 마블러스</h4>
-            <p>2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
-        </caption>
         <tr>
             <td valign="top">
                 <a href="" target="_blank">LINK</a><br>
@@ -102,7 +102,7 @@ title: 이력서
     </table>
     <table>
         <caption style=" margin: 10px; text-align: left;">
-            <h4 id="co1" style="margin: 0;">(주)지앤플렉스</h4>
+            <h4 id="co1" style="margin: 0px;">(주)지앤플렉스</h4>
             <p> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
         </caption>
         <tr>
