--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@ title: 이력서
 
 <div>
     <h3 id="workExperience">경력</h3>
-    <div style="margin: 20px 10px; margin-bottom: 0px;">
+    <div style="margin: 10px;">
         <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
         <p style="display: inline; margin: 0;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
     </div>
@@ -100,7 +100,7 @@ title: 이력서
             </td>
         </tr>
     </table>
-    <div style="margin: 20px 10px; margin-bottom: 0px;">
+    <div style="margin: 10px;">
         <h4 id="co2" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
         <p style="display: inline; margin: 0;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
     </div>
