Update resume.html 사용가능기술 상세
nav 기능과 상세 추가

--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@ title: 이력서
         </tr>
     </table>
     <div style="margin: 10px; margin-top:30px;">
-        <h4 id="co2" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
+        <h4 id="co1" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
         <p style="display: inline; margin: 0;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
     </div>
     <table>
@@ -228,10 +228,20 @@ title: 이력서
 
 <div>
     <h3 id="skil">사용 가능 기술</h3>
-    <ul>
-        <li>Android Studio (AOS)</li>
-        <li>Unity Engine (PC/Mobile)</li>
-    </ul>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skil2" style="margin: 0;">Android Studio</h4>
+        <ul>
+            <li>Adroid Native</li>
+        </ul>
+    </div>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skil1" style="margin: 0;">Unity Engine</h4>
+        <ul>
+            <li>Windows</li>
+            <li>Mobile(AOS/iOS)</li>
+            <li>Spine 2D</li>
+        </ul>
+    </div>
 </div>
 
 <div>
