--- a/resume.html
+++ b/resume.html
@@ -227,18 +227,18 @@ title: 이력서
 </div>
 
 <div>
-    <h3 id="skil">사용 가능 기술</h3>
+    <h3 id="skill">사용 가능 기술</h3>
     <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skil2" style="margin: 0;">Android Studio</h4>
+        <h4 id="skill2" style="margin: 0;">Android Studio</h4>
         <ul>
             <li>Adroid Native</li>
         </ul>
     </div>
     <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skil1" style="margin: 0;">Unity Engine</h4>
+        <h4 id="skill1" style="margin: 0;">Unity Engine</h4>
         <ul>
+            <li>Mobile (AOS / iOS)</li>
             <li>Windows</li>
-            <li>Mobile(AOS/iOS)</li>
             <li>Spine 2D</li>
         </ul>
     </div>
