--- a/resume.html
+++ b/resume.html
@@ -89,9 +89,9 @@ title: 이력서
         <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
         <p style="display: inline; margin: 0;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
         <div>
-            <img alt="untiy3d icon badge"
+            <img style="display: inline-block;" alt="untiy3d icon badge"
                 src="https://img.shields.io/badge/Unity-000000?style=Flat&logo=Unity&logoColor=white">
-            <img alt="androidstudio icon badge"
+            <img style="display: inline-block;" alt="androidstudio icon badge"
                 src="https://img.shields.io/badge/AndroidStudio-3DDC84?style=Flat&logo=AndroidStudio&logoColor=white">
         </div>
     </div>
@@ -110,13 +110,16 @@ title: 이력서
         <h4 id="co1" style="display: inline; margin: 0;">(주)지앤플렉스</h4>
         <p style="display: inline; margin: 0;"> 2019-12 ~ 2022-04<br>컨텐츠팀 선임연구원</p>
         <div>
-            <img alt="untiy3d icon badge"
+            <img style="display: inline-block;" alt="untiy3d icon badge"
                 src="https://img.shields.io/badge/Unity-000000?style=Flat&logo=Unity&logoColor=white">
-            <img alt="windows icon badge" src="https://img.shields.io/badge/Windows-0078D6?style=Flat&logo=Windows">
-            <img alt="android icon badge"
+            <img style="display: inline-block;" alt="windows icon badge"
+                src="https://img.shields.io/badge/Windows-0078D6?style=Flat&logo=Windows">
+            <img style="display: inline-block;" alt="android icon badge"
                 src="https://img.shields.io/badge/Android-3DDC84?style=Flat&logo=Android&logoColor=white">
-            <img alt="json badge" src="https://img.shields.io/badge/JSON-000000?style=Flat">
-            <img alt="spine2d badge" src="https://img.shields.io/badge/SPINE2D-55AAFF?style=Flat">
+            <img style="display: inline-block;" alt="json badge"
+                src="https://img.shields.io/badge/JSON-000000?style=Flat">
+            <img style="display: inline-block;" alt="spine2d badge"
+                src="https://img.shields.io/badge/SPINE2D-55AAFF?style=Flat">
         </div>
     </div>
     <table>
