--- a/resume.html
+++ b/resume.html
@@ -26,12 +26,6 @@ title: 이력서
     <p>2019년부터 프로그래머로 일하고 있습니다.</p>
 </div>
 
-<div>
-    <h3 id="introduce">자기소개</h3>
-    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다.
-        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
-</div>
-
 <div style="text-align: center;">
     <ul style="display: inline-block;">
         <li::marker style="content: '';">
@@ -84,7 +78,7 @@ title: 이력서
 </div>
 
 <div>
-    <h3 id="workExperience">경력</h3>
+    <h3 id="workExperience">주요 경력 사항</h3>
     <div style="margin: 10px; margin-top:40px;">
         <h4 id="co2" style="display: inline; margin: 0;">주식회사 마블러스</h4>
         <p style="display: inline; margin: 0;"> 2022-04 ~ 2023-03<br>Solution팀 선임연구원</p>
@@ -197,7 +191,40 @@ title: 이력서
 </div>
 
 <div>
-    <h3 id="otherExperience">활동</h3>
+    <h3 id="skill">사용 가능 기술</h3>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skill2" style="margin: 0;">Android Studio</h4>
+        <ul>
+            <li>Android Native</li>
+        </ul>
+    </div>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skill1" style="margin: 0;">Unity Engine</h4>
+        <ul>
+            <li>Mobile (AOS / iOS)</li>
+            <li>Windows</li>
+            <li>Spine 2D</li>
+        </ul>
+    </div>
+</div>
+
+<div>
+    <h3 id="education">학력</h3>
+    <ul>
+        <li>2023-04 ~ 2023-09 멋쟁이사자처럼 앱/안드로이드 스쿨 수료(예정)</li>
+        <li>2022-04 ~ 2022-08 학점은행제 컴퓨터공학사 취득</li>
+        <li>2019-02 ~ 2019-10 게임프로그램 개발자 양성과정 수료</li>
+    </ul>
+</div>
+
+<div>
+    <h3 id="introduce">자기소개</h3>
+    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다.
+        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
+</div>
+
+<div>
+    <h3 id="otherExperience">그 외 활동</h3>
     <table>
         <tr>
             <td valign="top">
@@ -245,30 +272,4 @@ title: 이력서
             </td>
         </tr>
     </table>
-</div>
-
-<div>
-    <h3 id="skill">사용 가능 기술</h3>
-    <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skill2" style="margin: 0;">Android Studio</h4>
-        <ul>
-            <li>Android Native</li>
-        </ul>
-    </div>
-    <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skill1" style="margin: 0;">Unity Engine</h4>
-        <ul>
-            <li>Mobile (AOS / iOS)</li>
-            <li>Windows</li>
-            <li>Spine 2D</li>
-        </ul>
-    </div>
-</div>
-
-<div>
-    <h3 id="education">학력</h3>
-    <ul>
-        <li>2023.04 ~ 2023.09 멋쟁이사자처럼 앱/안드로이드 스쿨</li>
-        <li>2022.04 ~ 2022.08 학점은행제 컴퓨터공학사 취득</li>
-    </ul>
 </div>
