--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@ title: 이력서
 
 <div style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
     <h2 id="resume">· 이력서 ·</h2>
-    <p>2019년부터 프로그래머로 일하고 있습니다.</p>
+    <!-- <p>2019년부터 프로그래머로 일하고 있습니다.</p> -->
 </div>
 
 <div style="text-align: center;">
@@ -40,8 +40,7 @@ title: 이력서
                     </a>
                 </div>
                 <div class="SNSlinks">
-                    <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=trakant32@gmail.com"
-                        target="_blank">
+                    <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=trakant32@gmail.com" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/archive/7/7e/20201017164718%21Gmail_icon_%282020%29.svg/120px-Gmail_icon_%282020%29.svg.png"
                             title="KakaoTalk" alt="KakaoTalk link icon">
                     </a>
@@ -76,6 +75,12 @@ title: 이력서
             </div>
         </li::marker>
     </ul>
+</div>
+
+<div>
+    <h3 id="introduce">자기소개</h3>
+    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다.
+        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
 </div>
 
 <div>
@@ -196,39 +201,6 @@ title: 이력서
 </div>
 
 <div>
-    <h3 id="skill">사용 가능 기술</h3>
-    <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skill2" style="margin: 0;">Android Studio</h4>
-        <ul>
-            <li>Android Native</li>
-        </ul>
-    </div>
-    <div style="margin: 10px; margin-top:30px;">
-        <h4 id="skill1" style="margin: 0;">Unity Engine</h4>
-        <ul>
-            <li>Mobile (AOS / iOS)</li>
-            <li>Windows</li>
-            <li>Spine 2D</li>
-        </ul>
-    </div>
-</div>
-
-<div>
-    <h3 id="education">학력</h3>
-    <ul>
-        <li>2023-04 ~ 2023-09 멋쟁이사자처럼 앱/안드로이드 스쿨 수료(예정)</li>
-        <li>2022-04 ~ 2022-08 학점은행제 컴퓨터공학사 취득</li>
-        <li>2019-02 ~ 2019-10 게임프로그램 개발자 양성과정 수료</li>
-    </ul>
-</div>
-
-<div>
-    <h3 id="introduce">자기소개</h3>
-    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다.
-        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
-</div>
-
-<div>
     <h3 id="otherExperience">그 외 활동</h3>
     <table>
         <tr>
@@ -277,4 +249,31 @@ title: 이력서
             </td>
         </tr>
     </table>
+</div>
+
+<div>
+    <h3 id="skill">사용 가능 기술</h3>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skill2" style="margin: 0;">Android Studio</h4>
+        <ul>
+            <li>Android Native</li>
+        </ul>
+    </div>
+    <div style="margin: 10px; margin-top:30px;">
+        <h4 id="skill1" style="margin: 0;">Unity Engine</h4>
+        <ul>
+            <li>Mobile (AOS / iOS)</li>
+            <li>Windows</li>
+            <li>Spine 2D</li>
+        </ul>
+    </div>
+</div>
+
+<div>
+    <h3 id="education">학력</h3>
+    <ul>
+        <li>2023-04 ~ 2023-09 멋쟁이사자처럼 앱/안드로이드 스쿨 수료(예정)</li>
+        <li>2022-04 ~ 2022-08 학점은행제 컴퓨터공학사 취득</li>
+        <li>2019-02 ~ 2019-10 게임프로그램 개발자 양성과정 수료</li>
+    </ul>
 </div>
