--- a/resume.html
+++ b/resume.html
@@ -79,8 +79,18 @@ title: 이력서
 
 <div>
     <h3 id="introduce">자기소개</h3>
-    <p>유니티 엔진을 사용한 게임개발로 시작하여 작은 스타트업에서 PC기반의 인터렉티브 서비스를 런칭했습니다.
-        이후, 독학만으로는 모바일 크로스 플랫폼을 지원하기에 역량이 부족하다 느끼고 이직을 조금 미뤄 안드로이드 개발을 중점적으로 익히고 있습니다.</p>
+    <p><b>One task at a time</b> 하나의 문제에 집중합니다.<br>
+        두 개의 중요한 프로젝트를 동시에 진행했던 경험이 있습니다. 주의를 기울이더라도 동시에 다양한 일을 처리하다보면 손발이 어지러워지기 마련이기에 고민이 되었습니다.<br>
+        먼저, 작업 단위를 잘게 나누고 우선순위를 정했습니다. 그리고 <b>한 번에 하나의 문제에 집중</b>하여 이슈를 처리해 갔습니다.
+        중요한 점은 이슈를 완벽하게 종료시켜 하위 이슈를 만들지 않았다는 것입니다. 작은 작업 단위는 이것을 가능하게 합니다.<br>
+        이런 방식으로 저는 다행히 두 프로젝트를 모두 소화할 수 있었습니다.
+    </p>
+    <p><b>Put an end to task</b> 집요하게 끝을 냅니다.<br>
+        특정 버젼의 빌드가 원인을 알 수 없는 오류로 중지됐던 적이 있습니다.
+        버젼에 제한을 두는 것으로 쉽게 해결할 수도 있었지만 그 대신, 수십 개의 빌드 조건을 하나하나 비활성 시켜가며 확인하는 방법을 택했습니다.
+        쉽게 우회 가능한 문제에 많은 시간을 할애하는 것은 일견, 불필요한 낭비처럼 보였을 것입니다.<br>
+        하지만 <b>집요하게</b> 검증을 거친 결과, 결국 오류를 발생시키는 조합을 찾아냈고 해당 버젼을 지원할 수 있었습니다.
+    </p>
 </div>
 
 <div>
