--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,13 @@ title: 이력서
                 </div>
             </div>
         </li::marker>
+        <li::marker style="content: '';">
+            <p style="text-align: left;">
+                Mobile: 010 - 2797 - 4416<br>
+                KakaoTalk ID: cambiera<br>
+                E-mail: trakant32@gmail.com
+            </p>
+        </li::marker>
     </ul>
     <ul style="display: inline-block; margin:10px; margin-top:40px;">
         <li::marker style="content: '';">
@@ -73,6 +80,13 @@ title: 이력서
                     </a>
                 </div>
             </div>
+        </li::marker>
+        <li::marker style="content: '';">
+            <p style="text-align: left;">
+                Github: https://github.com/SeungHyeon-Hong<br>
+                Blog: https://blog.naver.com/dusdkel<br>
+                Discord server: https://discord.gg/gw6RBwPxdb
+            </p>
         </li::marker>
     </ul>
 </div>
