--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@ title: 이력서
                 <div class="SNSlinks">
                     <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=trakant32@gmail.com" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/archive/7/7e/20201017164718%21Gmail_icon_%282020%29.svg/120px-Gmail_icon_%282020%29.svg.png"
-                            title="KakaoTalk" alt="KakaoTalk link icon">
+                            title="Gmail" alt="Gmail link icon">
                     </a>
                 </div>
             </div>
