--- a/resume.html
+++ b/resume.html
@@ -5,19 +5,17 @@ title: 이력서
 
 <style>
     .SNSBox {
-        display: grid;
-        place-content: center;
-        place-items: center;
-        grid-auto-flow: column;
+        text-align: left;
     }
 
     .SNSlinks {
         display: inline-block;
         padding: 10px;
+        vertical-align: middle;
     }
 
     .SNSlinks img {
-        width: 64px;
+        width: 32px;
     }
 </style>
 
@@ -29,7 +27,18 @@ title: 이력서
 <div style="text-align: center;">
     <ul style="display: inline-block; margin:10px; margin-top:40px;">
         <li::marker style="content: '';">
-            <h4 id="contact" style="margin: 0; text-align: left;">연락</h4>
+            <h4 id="contact" style="margin: 0; text-align: left;">연락처</h4>
+        </li::marker>
+        <li::marker style="content: '';">
+            <div class="SNSBox">
+                <div class="SNSlinks">
+                    <a href="tel:010-2797-4416" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Smartphone_icon_-_Noun_Project_283536.svg/240px-Smartphone_icon_-_Noun_Project_283536.svg.png"
+                            title="Mobile" alt="Mobile Link icon">
+                    </a>
+                </div>
+                <span>010-2797-4416</span>
+            </div>
         </li::marker>
         <li::marker style="content: '';">
             <div class="SNSBox">
@@ -39,20 +48,19 @@ title: 이력서
                             title="KakaoTalk" alt="KakaoTalk link icon">
                     </a>
                 </div>
+                <span>ID: cambiera</span>
+            </div>
+        </li::marker>
+        <li::marker style="content: '';">
+            <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=trakant32@gmail.com" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/archive/7/7e/20201017164718%21Gmail_icon_%282020%29.svg/120px-Gmail_icon_%282020%29.svg.png"
                             title="Gmail" alt="Gmail link icon">
                     </a>
                 </div>
+                <span>trakant32@gmail.com</span>
             </div>
-        </li::marker>
-        <li::marker style="content: '';">
-            <p style="text-align: left;">
-                Mobile: 010 - 2797 - 4416<br>
-                KakaoTalk ID: cambiera<br>
-                E-mail: trakant32@gmail.com
-            </p>
         </li::marker>
     </ul>
     <ul style="display: inline-block; margin:10px; margin-top:40px;">
@@ -67,26 +75,30 @@ title: 이력서
                             title="Github" alt="Github link icon">
                     </a>
                 </div>
+                <span>github.com/SeungHyeon-Hong</span>
+            </div>
+        </li::marker>
+        <li::marker style="content: '';">
+            <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://blog.naver.com/dusdkel" target="_blank">
                         <img src="https://play-lh.googleusercontent.com/Kbu0747Cx3rpzHcSbtM1zDriGFG74zVbtkPmVnOKpmLCS59l7IuKD5M3MKbaq_nEaZM=w240-rw"
                             title="NaverBlog" alt="NaverBlog link icon">
                     </a>
                 </div>
+                <span>blog.naver.com/dusdkel</span>
+            </div>
+        </li::marker>
+        <li::marker style="content: '';">
+            <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
                         <img src="https://seeklogo.com/images/D/discord-color-logo-E5E6DFEF80-seeklogo.com.png"
                             title="Discord" alt="Discord link icon">
                     </a>
                 </div>
+                <span>Discord server</span>
             </div>
-        </li::marker>
-        <li::marker style="content: '';">
-            <p style="text-align: left;">
-                Github: https://github.com/SeungHyeon-Hong<br>
-                Blog: https://blog.naver.com/dusdkel<br>
-                Discord server: https://discord.gg/gw6RBwPxdb
-            </p>
         </li::marker>
     </ul>
 </div>
