--- a/resume.html
+++ b/resume.html
@@ -4,13 +4,33 @@ title: 이력서
 ---
 
 <style>
+    .ContectBox {
+        text-align: center;
+    }
+
+    .ContectBox ul {
+        display: inline-block;
+        margin: 0 30px;
+        margin-top: 40px;
+    }
+
+    .ContectBox li::marker {
+        content: '';
+    }
+
+    .ContectBox h4 {
+        margin: 10px;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+
     .SNSBox {
+        padding: 10px;
         text-align: left;
     }
 
     .SNSlinks {
         display: inline-block;
-        padding: 10px;
         vertical-align: middle;
     }
 
@@ -24,12 +44,12 @@ title: 이력서
     <!-- <p>2019년부터 프로그래머로 일하고 있습니다.</p> -->
 </div>
 
-<div style="text-align: center;">
-    <ul style="display: inline-block; margin:10px; margin-top:40px;">
-        <li::marker style="content: '';">
-            <h4 id="contact" style="margin: 0; text-align: left;">연락처</h4>
+<div class="ContectBox">
+    <ul>
+        <li::marker>
+            <h4 id="contact">연락처</h4>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="tel:010-2797-4416" target="_blank">
@@ -40,7 +60,7 @@ title: 이력서
                 <span>010-2797-4416</span>
             </div>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="http://qr.kakao.com/talk/5AGVOFRC5vKu8v7EQn6goqg4Tj0-" target="_blank">
@@ -51,7 +71,7 @@ title: 이력서
                 <span>ID: cambiera</span>
             </div>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=trakant32@gmail.com" target="_blank">
@@ -63,11 +83,11 @@ title: 이력서
             </div>
         </li::marker>
     </ul>
-    <ul style="display: inline-block; margin:10px; margin-top:40px;">
-        <li::marker style="content: '';">
-            <h4 id="channel" style="margin: 0; text-align: left;">더 보기</h4>
+    <ul>
+        <li::marker>
+            <h4 id="channel">더 보기</h4>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://github.com/SeungHyeon-Hong" target="_blank">
@@ -78,7 +98,7 @@ title: 이력서
                 <span>github.com/SeungHyeon-Hong</span>
             </div>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://blog.naver.com/dusdkel" target="_blank">
@@ -89,7 +109,7 @@ title: 이력서
                 <span>blog.naver.com/dusdkel</span>
             </div>
         </li::marker>
-        <li::marker style="content: '';">
+        <li::marker>
             <div class="SNSBox">
                 <div class="SNSlinks">
                     <a href="https://discord.gg/gw6RBwPxdb" target="_blank">
