--- a/resume.html
+++ b/resume.html
@@ -5,32 +5,26 @@ title: 이력서
 
 <style>
     .ContectBox {
+        margin-top: 40px;
         text-align: center;
     }
 
     .ContectBox ul {
         display: inline-block;
         margin: 0 30px;
-        margin-top: 40px;
     }
 
     .ContectBox li::marker {
         content: '';
     }
 
-    .ContectBox h4 {
-        margin: 10px;
-        margin-bottom: 20px;
-        text-align: left;
-    }
-
     .SNSBox {
-        padding: 10px;
         text-align: left;
     }
 
     .SNSlinks {
         display: inline-block;
+        margin: 10px;
         vertical-align: middle;
     }
 
@@ -47,7 +41,7 @@ title: 이력서
 <div class="ContectBox">
     <ul>
         <li::marker>
-            <h4 id="contact">연락처</h4>
+            <h4 id="contact" style="margin: 10px 10px 20px; text-align: left;">연락처</h4>
         </li::marker>
         <li::marker>
             <div class="SNSBox">
@@ -85,7 +79,7 @@ title: 이력서
     </ul>
     <ul>
         <li::marker>
-            <h4 id="channel">더 보기</h4>
+            <h4 id="channel" style="margin: 10px 10px 20px; text-align: left;">더 보기</h4>
         </li::marker>
         <li::marker>
             <div class="SNSBox">
